#1- fonctional endpoints with JWT token

--- a/.env
+++ b/.env
@@ -8,16 +8,16 @@ DATABASE_URL="postgresql://symfony:symfony@127.0.0.1:5432/dont_be_lazy?serverVer
 ###< doctrine/dbal ###
 
 ###> lexik/jwt-authentication-bundle ###
-JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
-JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
-JWT_PASSPHRASE=your-secret-passphrase-change-in-production
+#JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+#JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+#JWT_PASSPHRASE=
 ###< lexik/jwt-authentication-bundle ###
 
 
 ###> symfony/routing ###
 # Configure how to generate URLs in non-HTTP contexts, such as CLI commands.
 # See https://symfony.com/doc/current/routing.html#generating-urls-in-commands
-DEFAULT_URI=http://localhost
+#DEFAULT_URI=http://localhost
 ###< symfony/routing ###
 
 ###> symfony/messenger ###
