--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -25,4 +25,5 @@ security:
 
     access_control:
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
+        - { path: ^/api/v1/register$, methods: [POST], roles: PUBLIC_ACCESS }
         - { path: ^/api, roles: ROLE_USER }
