--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,10 @@
         "symfony/yaml": "7.0.*"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.66",
+        "phpstan/phpstan": "^2.1",
+        "phpstan/phpstan-doctrine": "^2.0",
+        "phpstan/phpstan-symfony": "^2.0",
         "symfony/maker-bundle": "^1.0"
     },
     "config": {
